# ADMLOps

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_zh-CN.md  data  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
configs/centerpoint/: README.md  centerpoint_02pillar_second_secfpn_4x8_cyclic_20e_kitti-test.py  centerpoint_02pillar_second_secfpn_4x8_cyclic_20e_kitti.py  centerpoint_02pillar_second_secfpn_4x8_cyclic_20e_nus-4d.py  centerpoint_02pillar_second_secfpn_4x8_cyclic_20e_nus.py  centerpoint_02pillar_second_secfpn_4x8_cyclic_20e_yczx-5class-16line.py  centerpoint_02pillar_second_secfpn_circlenms_4x8_cyclic_20e_nus.py  centerpoint_02pillar_second_secfpn_cyclic_hesai40-bp-4class-60m.py
configs/mask_rcnn/: README.md  mask_rcnn_r50_fpn_1x_coco-bdd10k.py
configs/pointpillars/: README.md  hv_pointpillars_fpn_sbn-all_4x8_2x_nus-3d.py  hv_pointpillars_fpn_sbn-all_4x8_2x_usd-3d.py  hv_pointpillars_secfpn_6x8_160e_kitti-3d-3class.py
configs/segformer/: README.md  segformer_mit-b0_512x512_160k_ade20k.py
configs/yolopv2/: README.md  yolopv2_s_8x8_300e_coco-bdd10k.py
configs/yolox/: README.md  yolox_s_8x8_300e_coco-bdd10k.py  (+1 more)
docs/: requirements.txt
mmdeploy_ext/: docker-compose.yml
mmdeploy_ext/mmdet/yolox/sdk_validation/c/: CMakeLists.txt  main.cpp
requirements/: docs.txt
tools/: __init__.py  create_data.py  deploy.py  deploy_eval.py  deploy_rosrun.py  mmdet3d_dist_train.sh  mmdet3d_train.py  mmdet_train.py  mmseg_train.py  rosrun.py  train.py.bak  verfiy_install.sh
(+106 files in other folders)
